--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
    <title>Document</title>
 </head>
 <body>
-   <h1></h1>
+   <main>
+      <section class="main-section">
+         
+      </section>
+   </main>
 </body>
 </html>
