--- a/index.html
+++ b/index.html
@@ -9,8 +9,78 @@
 <body>
    <main>
       <section class="main-section">
-         
+
       </section>
    </main>
+   <footer>
+      <div class="footer-section">
+         <div class="footer-section__wrapper">
+            <div class="footer-section__logo">
+               <svg width="32" height="32" class="footer-section__imglogo">
+                  <use href="./images/sprite.svg#storefront"></use>
+               </svg>
+               <img src="./images/logo/NFTMarketplace.png" alt="logo" width="200" height="20">
+            </div>
+            <div class="footer-section__social">
+               <p>NFT marketplace UI created with Anima for Figma.</p>
+               <p>Join our community</p>
+               <ul class="footer-section__list">
+                  <li class="footer-section__item">
+                     <a href="https://discord.com/" target="_blank">
+                        <svg class="footer-section__imglogo">
+                           <use href="./images/sprite.svg#discordLogo"></use>
+                        </svg>
+                     </a>
+                  </li>
+                  <li class="footer-section__item">
+                     <a href="https://www.youtube.com/" target="_blank">
+                        <svg class="footer-section__imglogo">
+                           <use href="./images/sprite.svg#youtube"></use>
+                        </svg>
+                     </a>
+                  </li>
+                  <li class="footer-section__item">
+                     <a href="https://twitter.com/" target="_blank">
+                        <svg class="footer-section__imglogo">
+                           <use href="./images/sprite.svg#twitter"></use>
+                        </svg>
+                     </a>
+                  </li>
+                  <li class="footer-section__item">
+                     <a href="https://www.instagram.com/" target="_blank">
+                        <svg  class="footer-section__imglogo">
+                           <use href="./images/sprite.svg#insta"></use>
+                        </svg>
+                     </a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+         <div class="footer-section__explore">
+            <h3>Explore</h3>
+            <ul class="footer-section__explore--menu">
+               <li class="footer-section__explore--list">Marketplace</li>
+               <li class="footer-section__explore--list">Rankings</li>
+               <li class="footer-section__explore--list">Connect a wallet</li>
+            </ul>
+         </div>
+         <div class="footer-section__join">
+            <h3>Join our weekly digest</h3>
+            <p>Get exclusive promotions & updates straight to your inbox.</p>
+            <form action="" method="post">
+               <input type="text" placeholder="Enter Your Email Address">
+               <button type="submit" class="footer-section__button">
+                  <svg  class="footer-section__imglogo">
+                     <use href="./images/sprite.svg#mail"></use>
+                  </svg>
+                  Subscribe
+               </button>
+            </form>
+         </div>
+         <div class="footer-section__description">
+            <p>Ⓒ NFT Market. Use this template freely.</p>
+         </div>
+      </div>
+   </footer>
 </body>
 </html>
