--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                <svg width="32" height="32" class="footer-section__imglogo">
                   <use href="./images/sprite.svg#storefront"></use>
                </svg>
-               <img src="./images/logo/NFTMarketplace.png" alt="logo" width="200" height="20">
+               <img src="./images/logo/NFTMarketplace.png" alt="logo" height="20">
             </div>
             <div class="footer-section__social">
                <p>NFT marketplace UI created with Anima for Figma.</p>
@@ -27,28 +27,28 @@
                <ul class="footer-section__list">
                   <li class="footer-section__item">
                      <a href="https://discord.com/" target="_blank">
-                        <svg class="footer-section__imglogo">
+                        <svg class="footer-section__sociallogo">
                            <use href="./images/sprite.svg#discordLogo"></use>
                         </svg>
                      </a>
                   </li>
                   <li class="footer-section__item">
                      <a href="https://www.youtube.com/" target="_blank">
-                        <svg class="footer-section__imglogo">
+                        <svg class="footer-section__sociallogo">
                            <use href="./images/sprite.svg#youtube"></use>
                         </svg>
                      </a>
                   </li>
                   <li class="footer-section__item">
                      <a href="https://twitter.com/" target="_blank">
-                        <svg class="footer-section__imglogo">
+                        <svg class="footer-section__sociallogo">
                            <use href="./images/sprite.svg#twitter"></use>
                         </svg>
                      </a>
                   </li>
                   <li class="footer-section__item">
                      <a href="https://www.instagram.com/" target="_blank">
-                        <svg  class="footer-section__imglogo">
+                        <svg  class="footer-section__sociallogo">
                            <use href="./images/sprite.svg#insta"></use>
                         </svg>
                      </a>
@@ -67,10 +67,12 @@
          <div class="footer-section__join">
             <h3>Join our weekly digest</h3>
             <p>Get exclusive promotions & updates straight to your inbox.</p>
-            <form action="" method="post">
-               <input type="text" placeholder="Enter Your Email Address">
+            <form action="" >
+               <div class="footer-section__input">
+                  <input type="text" placeholder="Enter Your Email Address">
+               </div>
                <button type="submit" class="footer-section__button">
-                  <svg  class="footer-section__imglogo">
+                  <svg  class="footer-section__buttonsvg">
                      <use href="./images/sprite.svg#mail"></use>
                   </svg>
                   Subscribe
