--- a/index.html
+++ b/index.html
@@ -4,106 +4,13 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="../css/style.css">
    <title>Document</title>
 </head>
 <body>
    <main>
       <section class="main-section">
-         <div class="discover-section__wrapper">
-            <div class="discover-section__banner">
-               <span сlass="discover-section__bannerText">
-                  Discover More NFTs
-               </span>
-            </div>
-            <div class="discover-section__secondary">
-               <p class="discover-section__secondaryText">
-                  Explore new trending NFTs
-               </p>
-            </div>
-         </div>
-         <div class="discover-section__nft">
-            <div class="discover-section__nftOne">
-               <div class="discover-section__nftOneImg">
-                 <img src="images/desktop/distantGalaxy.jpg"> 
-               </div>
-               <div class="discover-section__nftOneInfo">
-                  <span class="discover-section__nftOnecaption">
-                     Distant Galaxy
-                  </span>
-                  <div class="discover-section__nftOneName">
-                     <img src="images/desktop/avatarPlaceholder1.jpg" class="discover-section__nftOneAvatar">
-                     <p class="discover-section__nftOneText">
-                        MoonDancer
-                     </p>
-                  </div>
-                  <div class="discover-section__nftOnePrice">
-                     <div class="discover-section__nftOnePriceText">
-                        <p>Price</p>
-                        <p>1.63 ETH</p>
-                     </div>
-                     <div class="discover-section__nftOneHighest">
-                        <p>Highest Bid</p>
-                        <p>0.33 wETH</p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="discover-section__nftTwo">
-               <div class="discover-section__nftTwoImg">
-                  <img src="images/desktop/lifeOnEdema.jpg">
-               </div>
-               <div class="discover-section__nftTwoInfo">
-                  <span class="discover-section__nftTwocaption">
-                     Life On Edena
-                  </span>
-                  <div class="discover-section__nftTwoName">
-                     <img src="images/desktop/avatarPlaceholder2.jpg" class="discover-section__nftTwoAvatar">
-                     <p class="discover-section__nftTwoText">
-                        NebulaKid
-                     </p>
-                  </div>
-                  <div class="discover-section__nftTwoPrice">
-                     <div class="discover-section__nftTwoPriceText">
-                        <p>Price</p>
-                        <p>1.63 ETH</p>
-                     </div>
-                     <div class="discover-section__nftTwoHighest">
-                        <p>Highest Bid</p>
-                        <p>0.33 wETH</p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="discover-section__nftThree">
-               <div class="discover-section__nftThreeImg">
-                  <img src="images/desktop/astroFiction.jpg">
-               </div>
-               <div class="discover-section__nftThreeInfo">
-                  <span class="discover-section__nftThreecaption">
-                     AstroFiction
-                  </span>
-                  <div class="discover-section__nftThreeName">
-                     <img src="images/desktop/avatarPlaceholder3.jpg" class="discover-section__nftThreeAvatar">
-                     <p class="discover-section__nftThreeText">
-                        Spaceone
-                     </p>
-                  </div>
-                  <div class="discover-section__nftThreePrice">
-                     <div class="discover-section__nftThreePriceText">
-                        <p>Price</p>
-                        <p>1.63 ETH</p>
-                     </div>
-                     <div class="discover-section__nftThreeHighest">
-                        <p>Highest Bid</p>
-                        <p>0.33 wETH</p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div class="discover-section__button">
-            <button>See All</button>
-         </div>
+         
       </section>
    </main>
    <footer>
@@ -161,16 +68,16 @@
          <div class="footer-section__join">
             <h3>Join our weekly digest</h3>
             <p>Get exclusive promotions & updates straight to your inbox.</p>
-            <form action="" >
+            <form action="" class="footer-section__form">
                <div class="footer-section__input">
                   <input type="text" placeholder="Enter Your Email Address">
+                  <button type="submit" class="footer-section__button">
+                     <svg  class="footer-section__buttonsvg">
+                        <use href="./images/sprite.svg#mail"></use>
+                     </svg>
+                     Subscribe
+                  </button>
                </div>
-               <button type="submit" class="footer-section__button">
-                  <svg  class="footer-section__buttonsvg">
-                     <use href="./images/sprite.svg#mail"></use>
-                  </svg>
-                  Subscribe
-               </button>
             </form>
          </div>
          <div class="footer-section__description">
