--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="../css/style.css">
    <title>Document</title>
 </head>
 <body>
@@ -164,13 +165,13 @@
             <form action="" >
                <div class="footer-section__input">
                   <input type="text" placeholder="Enter Your Email Address">
+                  <button type="submit" class="footer-section__button">
+                     <svg  class="footer-section__buttonsvg">
+                        <use href="./images/sprite.svg#mail"></use>
+                     </svg>
+                     Subscribe
+                  </button>
                </div>
-               <button type="submit" class="footer-section__button">
-                  <svg  class="footer-section__buttonsvg">
-                     <use href="./images/sprite.svg#mail"></use>
-                  </svg>
-                  Subscribe
-               </button>
             </form>
          </div>
          <div class="footer-section__description">
