--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="../css/style.css">
    <title>Document</title>
 </head>
 <body>
@@ -114,7 +113,7 @@
                <svg width="32" height="32" class="footer-section__imglogo">
                   <use href="./images/sprite.svg#storefront"></use>
                </svg>
-               <img src="./images/logo/NFTMarketplace.png" alt="logo" height="20">
+               <img src="./images/logo/NFTMarketplace.svg" alt="logo" height="20">
             </div>
             <div class="footer-section__social">
                <p>NFT marketplace UI created with Anima for Figma.</p>
@@ -154,9 +153,9 @@
          <div class="footer-section__explore">
             <h3>Explore</h3>
             <ul class="footer-section__explore--menu">
-               <li class="footer-section__explore--list">Marketplace</li>
-               <li class="footer-section__explore--list">Rankings</li>
-               <li class="footer-section__explore--list">Connect a wallet</li>
+               <li class="footer-section__explore--list"><a href="/">Marketplace</a></li>
+               <li class="footer-section__explore--list"><a href="/">Rankings</a></li>
+               <li class="footer-section__explore--list"><a href="/">Connect a wallet</a></li>
             </ul>
          </div>
          <div class="footer-section__join">
