--- a/index.html
+++ b/index.html
@@ -9,104 +9,100 @@
 <body>
    <main>
       <section class="main-section">
-
-
-
-         <div class="discover-section__wrapper">
-            <div class="discover-section__banner">
-               <span сlass="discover-section__bannerText">
-                  Discover More NFTs
-               </span>
-            </div>
-            <div class="discover-section__secondary">
-               <p class="discover-section__secondaryText">
-                  Explore new trending NFTs
-               </p>
-            </div>
-         </div>
-         <div class="discover-section__nft">
-            <div class="discover-section__nftOne">
-               <div class="discover-section__nftOneImg">
-                 <img src="images/desktop/distantGalaxy.jpg">
+         <section class="discover-section">
+            <div class="discover-section__wrapper">
+               <div class="discover-section__banner">
+                  <h4 сlass="discover-section__bannerText">
+                     Discover More NFTs
+                  </h4>
                </div>
-               <div class="discover-section__nftOneInfo">
-                  <span class="discover-section__nftOnecaption">
-                     Distant Galaxy
-                  </span>
-                  <div class="discover-section__nftOneName">
-                     <img src="images/desktop/avatarPlaceholder1.jpg" class="discover-section__nftOneAvatar">
-                     <p class="discover-section__nftOneText">
-                        MoonDancer
-                     </p>
-                  </div>
-                  <div class="discover-section__nftOnePrice">
-                     <div class="discover-section__nftOnePriceText">
-                        <p>Price</p>
-                        <p>1.63 ETH</p>
-                     </div>
-                     <div class="discover-section__nftOneHighest">
-                        <p>Highest Bid</p>
-                        <p>0.33 wETH</p>
-                     </div>
-                  </div>
+               <div class="discover-section__secondary">
+                  <p class="discover-section__secondaryText">
+                     Explore new trending NFTs 
+                  </p>
                </div>
             </div>
-            <div class="discover-section__nftTwo">
-               <div class="discover-section__nftTwoImg">
-                  <img src="images/desktop/lifeOnEdema.jpg">
-               </div>
-               <div class="discover-section__nftTwoInfo">
-                  <span class="discover-section__nftTwocaption">
-                     Life On Edena
-                  </span>
-                  <div class="discover-section__nftTwoName">
-                     <img src="images/desktop/avatarPlaceholder2.jpg" class="discover-section__nftTwoAvatar">
-                     <p class="discover-section__nftTwoText">
-                        NebulaKid
-                     </p>
+            <div class="discover-section__nft">
+               <div class="discover-section__nftOne">
+                  <div class="discover-section__nftOneImg">
+                    <img src="images/desktop/distantGalaxy.jpg">
                   </div>
-                  <div class="discover-section__nftTwoPrice">
-                     <div class="discover-section__nftTwoPriceText">
-                        <p>Price</p>
-                        <p>1.63 ETH</p>
+                  <div class="discover-section__nftOneInfo">
+                     <span class="discover-section__nftOnecaption">
+                        Distant Galaxy
+                     </span>
+                     <div class="discover-section__nftOneName">
+                        <img src="images/desktop/avatarPlaceholder1.jpg" class="discover-section__nftOneAvatar">
+                        <span class="discover-section__nftOneText">
+                           MoonDancer
+                        </span>
                      </div>
-                     <div class="discover-section__nftTwoHighest">
-                        <p>Highest Bid</p>
-                        <p>0.33 wETH</p>
+                     <div class="discover-section__nftOnePrice">
+                        <div class="discover-section__nftOnePriceText">
+                           <p>Price</p>
+                           <p class="p2">1.63 ETH</p>
+                        </div>
+                        <div class="discover-section__nftOneHighest">
+                           <p>Highest Bid</p>
+                           <p class="p2">0.33 wETH</p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="discover-section__nftTwo">
+                  <div class="discover-section__nftTwoImg">
+                     <img src="images/desktop/lifeOnEdema.jpg">
+                  </div>
+                  <div class="discover-section__nftTwoInfo">
+                     <span class="discover-section__nftTwocaption">
+                        Life On Edena
+                     </span>
+                     <div class="discover-section__nftTwoName">
+                        <img src="images/desktop/avatarPlaceholder2.jpg" class="discover-section__nftTwoAvatar">
+                        <span class="discover-section__nftTwoText">
+                           NebulaKid
+                        </span>
+                     </div>
+                     <div class="discover-section__nftTwoPrice">
+                        <div class="discover-section__nftTwoPriceText">
+                           <p>Price</p>
+                           <p class="p2">1.63 ETH</p>
+                        </div>
+                        <div class="discover-section__nftTwoHighest">
+                           <p>Highest Bid</p>
+                           <p class="p2">0.33 wETH</p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="discover-section__nftThree">
+                  <div class="discover-section__nftThreeImg">
+                     <img src="images/desktop/astroFiction.jpg">
+                  </div>
+                  <div class="discover-section__nftThreeInfo">
+                     <span class="discover-section__nftThreecaption">
+                        AstroFiction
+                     </span>
+                     <div class="discover-section__nftThreeName">
+                        <img src="images/desktop/avatarPlaceholder3.jpg" class="discover-section__nftThreeAvatar">
+                        <span class="discover-section__nftThreeText">
+                           Spaceone
+                        </span>
+                     </div>
+                     <div class="discover-section__nftThreePrice">
+                        <div class="discover-section__nftThreePriceText">
+                           <p>Price</p>
+                           <p class="p2">1.63 ETH</p>
+                        </div>
+                        <div class="discover-section__nftThreeHighest">
+                           <p>Highest Bid</p>
+                           <p class="p2">0.33 wETH</p>
+                        </div>
                      </div>
                   </div>
                </div>
             </div>
-            <div class="discover-section__nftThree">
-               <div class="discover-section__nftThreeImg">
-                  <img src="images/desktop/astroFiction.jpg">
-               </div>
-               <div class="discover-section__nftThreeInfo">
-                  <span class="discover-section__nftThreecaption">
-                     AstroFiction
-                  </span>
-                  <div class="discover-section__nftThreeName">
-                     <img src="images/desktop/avatarPlaceholder3.jpg" class="discover-section__nftThreeAvatar">
-                     <p class="discover-section__nftThreeText">
-                        Spaceone
-                     </p>
-                  </div>
-                  <div class="discover-section__nftThreePrice">
-                     <div class="discover-section__nftThreePriceText">
-                        <p>Price</p>
-                        <p>1.63 ETH</p>
-                     </div>
-                     <div class="discover-section__nftThreeHighest">
-                        <p>Highest Bid</p>
-                        <p>0.33 wETH</p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div class="discover-section__button">
-            <button>See All</button>
-         </div>
+         </section>
          <!--Yuliia's section-->
       <section class="main-section">
          <div class="container">
