--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                </div>
                <div class="discover-section__secondary">
                   <p class="discover-section__secondaryText">
-                     Explore new trending NFTs 
+                     Explore new trending NFTs
                   </p>
                </div>
             </div>
@@ -155,7 +155,13 @@
         <section class="join-section">
           <div class="join-section__shell">
             <div class="join-section__holder">
-              <div class="join-section__image"></div>
+              <div class="join-section__image">
+                 <picture>
+                    <source media="(min-width:1280px)" srcset="./images/desktop/space.jpg"/>
+                    <source media="(min-width:834px)" srcset="./images/tablet/spaceTablet.jpg"/>
+                    <img alt="image" src="./images/mobile/spaceMobile.jpg" />
+                 </picture>
+              </div>
               <div class="join-section__info">
                 <h2 class="join-section__info--title">Join our weekly digest</h2>
                 <p class="join-section__info--text">Get exclusive promotions & updates straight to your inbox.</p>
